update colab file

--- a/colab/2_Classification_with_Machine_Learning.ipynb
+++ b/colab/2_Classification_with_Machine_Learning.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "d39427db-e6d8-49d0-a395-6d96344edaba",
       "metadata": {
         "id": "d39427db-e6d8-49d0-a395-6d96344edaba"
@@ -65,7 +65,7 @@
         "id": "QHoO8Wi6QWmv"
       },
       "id": "QHoO8Wi6QWmv",
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -104,7 +104,7 @@
         "id": "vJitaZqSPjXR"
       },
       "id": "vJitaZqSPjXR",
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -143,7 +143,7 @@
         "id": "NXxyK0sRPmOW"
       },
       "id": "NXxyK0sRPmOW",
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -156,7 +156,7 @@
         "id": "tx9cvvP7BL0r"
       },
       "id": "tx9cvvP7BL0r",
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -180,11 +180,23 @@
         "    print('Read {} lines'.format(len(lines)))"
       ],
       "metadata": {
-        "id": "F9UfwAokQcMJ"
+        "id": "F9UfwAokQcMJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3e186260-c2af-473b-d68d-dc98291093e4"
       },
       "id": "F9UfwAokQcMJ",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Read 800 lines\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -209,7 +221,7 @@
         "id": "SXKiO_paQjI4"
       },
       "id": "SXKiO_paQjI4",
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -230,17 +242,29 @@
     {
       "cell_type": "code",
       "source": [
-        "trainset = lines[:int(0.7*len(lines))]\n",
-        "valset = lines[int(0.7*len(lines)):int(0.8*len(lines))]\n",
-        "testset = lines[int(0.8*len(lines)):]\n",
+        "trainset = lines[:int(0.2*len(lines))]\n",
+        "valset = lines[int(0.2*len(lines)):int(0.4*len(lines))]\n",
+        "testset = lines[int(0.4*len(lines)):]\n",
         "print('Total: {} splitted in Train: {}, Val: {} and Test: {}'.format(len(lines), len(trainset), len(valset), len(testset)))"
       ],
       "metadata": {
-        "id": "fipgi_u-QnlP"
+        "id": "fipgi_u-QnlP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c3954ca7-b1d5-4755-c214-bfc6e089aa02"
       },
       "id": "fipgi_u-QnlP",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total: 800 splitted in Train: 160, Val: 160 and Test: 480\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -265,11 +289,23 @@
         "print('Train: {}, Val: {} and Test: {}'.format(len(train_x), len(val_x), len(test_x)))"
       ],
       "metadata": {
-        "id": "SbKcMlOWQtTn"
+        "id": "SbKcMlOWQtTn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b8b6dd68-eb5c-439d-a504-59e42c2b2690"
       },
       "id": "SbKcMlOWQtTn",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train: 160, Val: 160 and Test: 480\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -285,18 +321,113 @@
     {
       "cell_type": "code",
       "source": [
-        "from numpy.core.arrayprint import format_float_scientific\n",
-        "clf = svm.SVC(gamma=0.001, C=100., kernel='rbf', verbose=False, probability=False)\n",
-        "# clf = RandomForestClassifier()\n",
-        "# clf = AdaBoostClassifier()\n",
-        "# clf = DecisionTreeClassifier()"
+        "def prepare_data(lines):\n",
+        "    labels = []\n",
+        "    coordinates = []\n",
+        "\n",
+        "    for line in lines:\n",
+        "        content = line.split()\n",
+        "\n",
+        "        if 'triangle' in content[0]:\n",
+        "          labels.append(get_labels(content[0]))\n",
+        "          coord = [float(x) for x in content[1:]]\n",
+        "          sumx = []\n",
+        "          sumy = []\n",
+        "          for value in range(len(coord)):\n",
+        "            if value%2 == 0:\n",
+        "              sumx.append(coord[value])\n",
+        "            else:\n",
+        "              sumy.append(coord[value])\n",
+        "          coord.append(round(sum(sumx)/3))\n",
+        "          coord.append(round(sum(sumy)/3))\n",
+        "          coordinates.append(coord)\n",
+        "\n",
+        "        \n",
+        "        # let's exclude triangles\n",
+        "        elif 'triangle' not in content[0]:\n",
+        "            # create label\n",
+        "            labels.append(get_labels(content[0]))\n",
+        "\n",
+        "            # coordinates\n",
+        "            coordinates.append([float(x) for x in content[1:]])\n",
+        "    \n",
+        "    return coordinates, labels"
       ],
       "metadata": {
-        "id": "ZF5xpgPfQ36w"
+        "id": "aoLyKrHyxq7k"
+      },
+      "id": "aoLyKrHyxq7k",
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from numpy.core.arrayprint import format_float_scientific\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.ensemble import AdaBoostClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
+        "\n",
+        "names = [\n",
+        "    \"SVC\",\n",
+        "    \"Random Forest\",\n",
+        "    \"Ada Boost\",\n",
+        "    \"Decision Tree\",\n",
+        "    \"Quadratic Discrimination\"\n",
+        "]\n",
+        "\n",
+        "classifiers = [\n",
+        "    svm.SVC(gamma=0.001, C=100., kernel='rbf', verbose=False, probability=False),\n",
+        "    RandomForestClassifier(max_depth=5, n_estimators=10, max_features=1),\n",
+        "    AdaBoostClassifier(),\n",
+        "    DecisionTreeClassifier(),\n",
+        "    QuadraticDiscriminantAnalysis()\n",
+        "]\n",
+        "\n",
+        "for name, clf in zip(names, classifiers):\n",
+        "  score = clf.fit(train_x, train_y)\n",
+        "\n",
+        "  print('Validation accuracy: {}, {:.3f}'.format((name),(clf.score(val_x, val_y))))\n",
+        "  pred_y = clf.predict(test_x)\n",
+        "  print('Final Accuracy: {:.3f}'.format(accuracy_score(test_y, pred_y)))\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ZF5xpgPfQ36w",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "15be2938-0e1d-4420-8ebc-a1a1129cb96c"
       },
       "id": "ZF5xpgPfQ36w",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Validation accuracy: SVC, 0.588\n",
+            "Final Accuracy: 0.621\n",
+            "Validation accuracy: Random Forest, 0.725\n",
+            "Final Accuracy: 0.702\n",
+            "Validation accuracy: Ada Boost, 0.588\n",
+            "Final Accuracy: 0.588\n",
+            "Validation accuracy: Decision Tree, 0.700\n",
+            "Final Accuracy: 0.758\n",
+            "Validation accuracy: Quadratic Discrimination, 1.000\n",
+            "Final Accuracy: 1.000\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/discriminant_analysis.py:878: UserWarning: Variables are collinear\n",
+            "  warnings.warn(\"Variables are collinear\")\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -319,11 +450,34 @@
         "clf.fit(train_x, train_y)"
       ],
       "metadata": {
-        "id": "uaoAX6iwQ5hd"
+        "id": "uaoAX6iwQ5hd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8b552b14-5a86-4869-9dcf-8f75c72852b7"
       },
       "id": "uaoAX6iwQ5hd",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/discriminant_analysis.py:878: UserWarning: Variables are collinear\n",
+            "  warnings.warn(\"Variables are collinear\")\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "QuadraticDiscriminantAnalysis()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -347,11 +501,23 @@
         "print('Validation accuracy: {:.3f}'.format(clf.score(val_x, val_y)))"
       ],
       "metadata": {
-        "id": "SmdAmrAfhKKi"
+        "id": "SmdAmrAfhKKi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b40969f6-7d50-422c-a98d-faf84dde9785"
       },
       "id": "SmdAmrAfhKKi",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Validation accuracy: 1.000\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -375,11 +541,33 @@
         "print('GT {} samples: {}'.format(len(test_y), test_y))"
       ],
       "metadata": {
-        "id": "_hDdyRVIQ99P"
+        "id": "_hDdyRVIQ99P",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "63a64a2d-b9a9-444c-dcc1-2cc826986a45"
       },
       "id": "_hDdyRVIQ99P",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Predicted 365 samples: [1 2 2 1 1 2 3 2 2 3 3 1 3 2 3 2 3 2 3 1 1 2 1 2 2 2 2 3 3 3 1 1 2 2 2 3 2\n",
+            " 1 3 1 1 1 2 2 1 3 1 2 1 2 2 3 1 1 2 1 2 2 2 2 3 3 1 2 3 2 3 3 2 1 1 3 2 1\n",
+            " 3 3 1 3 1 1 1 1 3 2 3 1 1 1 3 1 1 3 3 3 3 1 3 3 1 2 3 2 1 3 1 3 1 3 3 3 1\n",
+            " 3 1 3 1 3 2 2 2 2 1 2 1 2 3 3 1 1 2 3 3 3 2 2 2 1 2 3 2 2 2 1 2 2 3 3 1 3\n",
+            " 1 2 1 1 1 1 2 2 1 2 1 2 1 2 2 2 3 3 2 1 3 1 1 3 1 1 2 1 2 2 2 1 3 1 3 1 2\n",
+            " 1 2 3 3 2 2 1 2 3 3 1 2 2 1 3 2 1 3 1 3 2 3 3 2 1 2 3 2 1 3 1 3 2 3 2 3 3\n",
+            " 2 1 3 1 1 3 3 2 2 1 1 2 3 1 3 3 1 3 1 3 2 2 3 1 2 3 2 3 2 3 3 3 1 2 3 1 3\n",
+            " 1 3 1 3 3 2 1 3 3 1 2 3 2 2 1 3 3 2 1 1 3 1 1 2 2 3 2 3 3 2 1 3 3 2 1 1 2\n",
+            " 1 1 2 2 1 3 2 3 1 1 2 1 3 3 1 1 2 1 2 2 2 1 1 1 3 3 3 3 1 1 2 3 3 2 1 1 2\n",
+            " 1 2 3 3 1 3 3 3 1 3 2 1 3 2 3 1 3 1 3 2 1 3 1 3 1 1 2 2 1 2 3 3]\n",
+            "GT 365 samples: [1, 2, 2, 1, 1, 2, 3, 2, 2, 3, 3, 1, 3, 2, 3, 2, 3, 2, 3, 1, 1, 2, 1, 2, 2, 2, 2, 3, 3, 3, 1, 1, 2, 2, 2, 3, 2, 1, 3, 1, 1, 1, 2, 2, 1, 3, 1, 2, 1, 2, 2, 3, 1, 1, 2, 1, 2, 2, 2, 2, 3, 3, 1, 2, 3, 2, 3, 3, 2, 1, 1, 3, 2, 1, 3, 3, 1, 3, 1, 1, 1, 1, 3, 2, 3, 1, 1, 1, 3, 1, 1, 3, 3, 3, 3, 1, 3, 3, 1, 2, 3, 2, 1, 3, 1, 3, 1, 3, 3, 3, 1, 3, 1, 3, 1, 3, 2, 2, 2, 2, 1, 2, 1, 2, 3, 3, 1, 1, 2, 3, 3, 3, 2, 2, 2, 1, 2, 3, 2, 2, 2, 1, 2, 2, 3, 3, 1, 3, 1, 2, 1, 1, 1, 1, 2, 2, 1, 2, 1, 2, 1, 2, 2, 2, 3, 3, 2, 1, 3, 1, 1, 3, 1, 1, 2, 1, 2, 2, 2, 1, 3, 1, 3, 1, 2, 1, 2, 3, 3, 2, 2, 1, 2, 3, 3, 1, 2, 2, 1, 3, 2, 1, 3, 1, 3, 2, 3, 3, 2, 1, 2, 3, 2, 1, 3, 1, 3, 2, 3, 2, 3, 3, 2, 1, 3, 1, 1, 3, 3, 2, 2, 1, 1, 2, 3, 1, 3, 3, 1, 3, 1, 3, 2, 2, 3, 1, 2, 3, 2, 3, 2, 3, 3, 3, 1, 2, 3, 1, 3, 1, 3, 1, 3, 3, 2, 1, 3, 3, 1, 2, 3, 2, 2, 1, 3, 3, 2, 1, 1, 3, 1, 1, 2, 2, 3, 2, 3, 3, 2, 1, 3, 3, 2, 1, 1, 2, 1, 1, 2, 2, 1, 3, 2, 3, 1, 1, 2, 1, 3, 3, 1, 1, 2, 1, 2, 2, 2, 1, 1, 1, 3, 3, 3, 3, 1, 1, 2, 3, 3, 2, 1, 1, 2, 1, 2, 3, 3, 1, 3, 3, 3, 1, 3, 2, 1, 3, 2, 3, 1, 3, 1, 3, 2, 1, 3, 1, 3, 1, 1, 2, 2, 1, 2, 3, 3]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -400,11 +588,23 @@
         "print('Final Accuracy: {:.3f}'.format(accuracy_score(test_y, pred_y)))"
       ],
       "metadata": {
-        "id": "ln0j7RcbQ_9k"
+        "id": "ln0j7RcbQ_9k",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "146a877e-5aec-4f1a-cbf8-18babd1391fe"
       },
       "id": "ln0j7RcbQ_9k",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Final Accuracy: 1.000\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
